--- a/src/main/resources/assets/goodmorning/lang/en_us.lang
+++ b/src/main/resources/assets/goodmorning/lang/en_us.lang
@@ -1,9 +1,11 @@
 config.goodmorning.show=Enable
 config.goodmorning.addOneDay=Add one day
+config.goodmorning.dayStartAtMidnight=Day start at midnight
 config.goodmorning.title=Title
 config.goodmorning.subtitle=Subtitle
 
 config.goodmorning.show.tooltip=Enable the mod
 config.goodmorning.addOneDay.tooltip=Whether to add one day to the shown date.\n§eDefault Minecraft starts at day 0
-config.goodmorning.title.tooltip=The first line of the shown information,\n§e@PLAYER@ will be replaced with the player name,\n§e@DATE@ will be replaced with the in game date,\n§e\u will be replaced with section sign.\n§eYou can add more than one random titles
-config.goodmorning.subtitle.tooltip=The second line of the shown information,\n§e@PLAYER@ will be replaced with the player name,\n§e@DATE@ will be replaced with the in game date,\n§e\u will be replaced with section sign.\n§eYou can add more than one random subtitles
+config.goodmorning.dayStartAtMidnight.tooltip=If true, a day will start at 00:00 but not 06:00, (useful when the mod somnia loaded)
+config.goodmorning.title.tooltip=The first line of the shown information,\n§eUseful placeholders: @PLAYER@, @DATE@, @HOUR@, @MINUTE@,\n§e\u will be replaced with section sign.\n§eYou can add more than one random titles
+config.goodmorning.subtitle.tooltip=The second line of the shown information,\n§eUseful placeholders: @PLAYER@, @DATE@, @HOUR@, @MINUTE@,\n§e\u will be replaced with section sign.\n§eYou can add more than one random subtitles
